Populated Readme and improved error scenario.

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,8 +4,8 @@
       {
         "Name": "File",
         "Args": {
-          "path": "C:/Log/MeanSongs/log-{Date}.json",
-          "rollingInterval": "Day"
+          "path": "C:/Log/MeanSongs/log-.json",
+          "rollingInterval": "Hour"
         }
       }
     ]
